--- a/trunk/simulations-html/simulations/build-an-atom-html/build-an-atom-html.html
+++ b/trunk/simulations-html/simulations/build-an-atom-html/build-an-atom-html.html
@@ -59,7 +59,7 @@
     </div>
 </div>
 
-<script data-main="app-easel/build-an-atom-config.js" src="../../contrib/require-2.1.2.js"></script>
+<script data-main="js/build-an-atom-config.js" src="../../contrib/require-2.1.2.js"></script>
 
 </body>
 </html>
