--- a/simulations-html/simulations/energy-skate-park/index.html
+++ b/simulations-html/simulations/energy-skate-park/index.html
@@ -18,6 +18,9 @@
     <!--Launch Development Version-->
     <script data-main="js/config.js" src="../../contrib/require-2.1.2.js"></script>
 
+    <script type="text/javascript" src="../../common/phetcommon/js/view/PrototypeDialog.js"></script>
+    <link rel="stylesheet" href="../../common/phetcommon/css/phetcommon.css"/>
+
     <!--Launch the minified version-->
     <!--<script src="../../contrib/require-2.1.2.js"></script>-->
     <!--<script type="text/javascript" src="dist/release/require.js"></script>-->
@@ -35,5 +38,25 @@
 <!--Tabs populated using templates-->
 <div id="container"></div>
 
+<div class="prototype-overlay">
+    <div class="popup" id="about">
+        <div class="popup-content">
+            <h3>Energy Skate Park: Basics Prototype</h3>
+
+            <div class="credits">
+                <a class="logo" href="http://phet.colorado.edu">
+                    <img src="images/phet-logo-120x50.jpg"/>
+                </a>
+
+                <div class="text">
+                    Here at <a href="http://phet.colorado.edu">PhET Interactive Simulations</a>, we are rebuilding our simulations to work in the browser and on tablets.
+                    Please be aware this version is under active development, and may be inaccurate or incomplete in parts. Enjoy and please contact <a href="mailto:phethelp@colorado.edu">phethelp@colorado.edu</a>
+                    if you have trouble getting it running on any of your browsers or mobile devices.
+                </div>
+                <button class="prototype-dialog-ok-button">OK</button>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
