--- a/team/cmalley/html5/require-include-test/index.html
+++ b/team/cmalley/html5/require-include-test/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8"/>
-    <script data-main="js/main" src="lib/require-2.1.1.js"></script>
+    <script data-main="js/main" src="http://cdnjs.cloudflare.com/ajax/libs/require.js/0.26.0/require.min.js"></script>
 </head>
 <body>
 <h1>testing...</h1>
