--- a/trunk/simulations-html/simulations/faraday/index.html
+++ b/trunk/simulations-html/simulations/faraday/index.html
@@ -7,7 +7,7 @@
 <html>
 <head>
     <meta charset="utf-8"/>
-    <title>Faraday's Electromagnet Lab</title>
+    <title></title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="../../contrib/jquery.mobile-1.2.0/jquery.mobile-1.2.0.css"/>
