--- a/team/cmalley/html5/canvas-resize/index.html
+++ b/team/cmalley/html5/canvas-resize/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8"/>
+    <link rel="stylesheet" href="css/canvas-resize.css"/>
     <script src="lib/jquery-1.8.3.js"></script>
     <script data-main="js/config.js" src="lib/require-2.1.1.js"></script>
 </head>
