--- a/trunk/simulations-html/common/phetcommon/html/prototype-dialog.html
+++ b/trunk/simulations-html/common/phetcommon/html/prototype-dialog.html
@@ -9,8 +9,8 @@
                 </a>
 
                 <div class="text">
-                    Here at <a href="http://phet.colorado.edu">PhET Interactive Simulations</a>, we are rebuilding our simulations to work in the browser and on tablets.
-                    Please be aware this version is under active development, and may be inaccurate or incomplete in parts. Enjoy and please contact <a href="mailto:phethelp@colorado.edu">phethelp@colorado.edu</a>
+                    Here at <a href="http://phet.colorado.edu" target="_blank">PhET Interactive Simulations</a>, we are investigating simulations that work in the browser and on tablets.
+                    Please be aware this version is a prototype, and may be inaccurate or incomplete in parts. Enjoy and please contact <a href="mailto:phethelp@colorado.edu">phethelp@colorado.edu</a>
                     if you have trouble running it on any of your browsers or mobile devices.
                 </div>
                 <button class="prototype-dialog-ok-button">OK</button>
