--- a/trunk/simulations-html/simulations/faraday/html/optionsButton.html
+++ b/trunk/simulations-html/simulations/faraday/html/optionsButton.html
@@ -4,4 +4,4 @@
   -- Pressing this button causes a popup to slide in from the right.
   -->
 <a id="optionsButton" href="#optionsPanel" data-rel="popup" data-transition="slide" data-position-to="window"
-   data-role="button" data-icon="gear" data-inline="true"><%= options %></a>
+   data-role="button" data-icon="gear" data-inline="true" data-theme="e"><%= options %></a>
