--- a/trunk/simulations-html/common/phetcommon/html/prototype-dialog.html
+++ b/trunk/simulations-html/common/phetcommon/html/prototype-dialog.html
@@ -5,7 +5,8 @@
 
             <div class="credits">
                 <a class="logo" href="http://phet.colorado.edu">
-                    <img src="images/phet-logo-120x50.jpg"/>
+                    <!--This template is instantiated in simulation code, so must refer to the correct relative path for common images.-->
+                    <img src="../../common/phetcommon/images/phet-logo-120x50.jpg"/>
                 </a>
 
                 <div class="text">
