--- a/trunk/simulations-html/common/phetcommon/html/prototype-dialog.html
+++ b/trunk/simulations-html/common/phetcommon/html/prototype-dialog.html
@@ -1,7 +1,7 @@
 <div class="prototype-overlay">
     <div class="popup" id="about">
         <div class="popup-content">
-            <h3><%= simName %> Prototype</h3>
+            <h3><%= simName %> (prototype)</h3>
 
             <div class="credits">
                 <a class="logo" href="http://phet.colorado.edu">
@@ -11,7 +11,7 @@
 
                 <div class="text">
                     Here at <a href="http://phet.colorado.edu" target="_blank">PhET Interactive Simulations</a>, we are investigating simulations that work in the browser and on tablets.
-                    Please be aware this version is a prototype, and may be inaccurate or incomplete in parts. Enjoy and please contact <a href="mailto:phethelp@colorado.edu">phethelp@colorado.edu</a>
+                    Please be aware that this version is a prototype, and may be inaccurate or incomplete in parts. Enjoy and please contact <a href="mailto:phethelp@colorado.edu">phethelp@colorado.edu</a>
                     if you have trouble running it on any of your browsers or mobile devices.
                 </div>
                 <button class="prototype-dialog-ok-button">OK</button>
