--- a/simulations-html/simulations/faraday/index.html
+++ b/simulations-html/simulations/faraday/index.html
@@ -20,6 +20,9 @@
 
     <!-- Application JavaScript -->
     <script data-main='js/config.js' src='../../contrib/require-2.1.2.js'></script>
+
+    <!-- Analytics for Dec 2012 newsletter prototypes -->
+    <script src='../../common/phetcommon/js/analytics/prototye_analytics.js'></script>
 </head>
 <body id="topbody">
 <div>
