--- a/simulations-html/simulations/faraday/index.html
+++ b/simulations-html/simulations/faraday/index.html
@@ -21,7 +21,7 @@
     <!-- Application JavaScript -->
     <script data-main='js/config.js' src='../../contrib/require-2.1.2.js'></script>
 
-    <!-- Analytics for Dec 2012 newsletter prototypes -->
+    <!-- Google Analytics -->
     <script src='../../common/phetcommon/js/analytics/google-analytics.js'></script>
 </head>
 <body id="topbody">
