--- a/simulations-html/simulations/build-an-atom-html/build-an-atom-html.html
+++ b/simulations-html/simulations/build-an-atom-html/build-an-atom-html.html
@@ -19,8 +19,8 @@
 
     <title>Build an Atom Easel</title>
 
-    <link rel="stylesheet"
-          href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css"/>
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css"/>
+    <link rel="stylesheet" href="../../common/phetcommon/css/phetcommon.css"/>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
 
