--- a/trunk/simulations-html/simulations/energy-skate-park/index.html
+++ b/trunk/simulations-html/simulations/energy-skate-park/index.html
@@ -4,21 +4,17 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="white">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="../../contrib/bootstrap-2.2.1/css/bootstrap.css"/>
-    <script type="text/javascript" src="../../contrib/jquery-1.8.3.js"></script>
-    <script type="text/javascript" src="../../contrib/bootstrap-2.2.1/js/bootstrap.js"></script>
 
+    <link rel="stylesheet" href="../../contrib/jquery.mobile-1.2.0/jquery.mobile-1.2.0.css"/>
+    <link rel="stylesheet" href="../../common/phetcommon/css/phetcommon.css"/>
     <link rel="stylesheet" href="css/main.css"/>
 
+    <script type="text/javascript" src="../../contrib/jquery-1.8.3.js"></script>
+    <script type="text/javascript" src="../../contrib/jquery.mobile-1.2.0/jquery.mobile-1.2.0-phet.js"></script>
     <script data-main="js/config.js" src="../../contrib/stats-0.0.1.js"></script>
-
-    <!--When pointing to the helper.js under the source directory, it had a redirect error on spot, so I made a copy-->
-    <script type="text/javascript" src="../../contrib/mbp-helper-4.0.0.js"></script>
 
     <!--Launch Development Version-->
     <script data-main="js/config.js" src="../../contrib/require-2.1.2.js"></script>
-
-    <link rel="stylesheet" href="../../common/phetcommon/css/phetcommon.css"/>
 
     <!--Launch the minified version-->
     <!--<script src="../../contrib/require-2.1.2.js"></script>-->
@@ -35,7 +31,7 @@
 
 <body>
 <!--For tests-->
-<div id="qunit"></div>
+<!--<div id="qunit"></div>-->
 
 <!--Tabs populated using templates-->
 <div id="container"></div>
