--- a/trunk/simulations-html/simulations/energy-skate-park/tab.html
+++ b/trunk/simulations-html/simulations/energy-skate-park/tab.html
@@ -29,11 +29,11 @@
 
     <div class="footer">
         <fieldset data-role="controlgroup" data-type="horizontal" class="speed-buttons">
-            <input type="radio" name="radio-choice" id="radio-choice-1" value="choice-1"/>
-            <label for="radio-choice-1">Slow Motion</label>
+            <input type="radio" name="radio-choice" id="slow-motion-button" value="choice-1">
+            <label for="slow-motion-button">Slow Motion</label>
 
-            <input type="radio" name="radio-choice" id="radio-choice-2" value="choice-2" checked="checked"/>
-            <label for="radio-choice-2">Normal</label>
+            <input type="radio" name="radio-choice" id="normal-button" value="choice-2" checked="checked"/>
+            <label for="normal-button">Normal</label>
         </fieldset>
 
         <a href="index.html" data-role="button" data-inline="true" class="play-pause-button">&#10074;&#10074;</a>
