--- a/simulations-html/simulations/energy-skate-park/tab.html
+++ b/simulations-html/simulations/energy-skate-park/tab.html
@@ -36,7 +36,7 @@
             <label for="normal-button">Normal</label>
         </fieldset>
 
-        <a href="index.html" data-role="button" data-inline="true" class="play-pause-button">&#10074;&#10074;</a>
+        <a href="#" data-role="button" data-inline="true" class="play-pause-button">&#10074;&#10074;</a>
     </div>
 
 </div>
