--- a/trunk/simulations-html/experimental/concentration-caat/index.html
+++ b/trunk/simulations-html/experimental/concentration-caat/index.html
@@ -37,8 +37,8 @@
     </style>
 </head>
 <body>
-<script type="text/javascript" src="js/vendor/caat.js"></script>
-<script type="text/javascript" src="js/vendor/hammer.js"></script>
+<script type="text/javascript" src="src/js/vendor/caat.js"></script>
+<script type="text/javascript" src="src/js/vendor/hammer.js"></script>
 <!--<script type="text/javascript" src="caat-components.js"></script>-->
 <script type="text/javascript" src="concentration.js"></script>
 <script type="text/javascript" src="main.js"></script>
