--- a/trunk/simulations-html/experimental/concentration-caat/index.html
+++ b/trunk/simulations-html/experimental/concentration-caat/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="white">
+    <link type="text/css" href="../../common/phetcommon/css/phetcommon.css" rel="stylesheet"/>
+    <script src='../../contrib/jquery-1.8.3.js' type="text/javascript"></script>
     <title>Concentration</title>
     <style type="text/css">
         html, body {
@@ -35,12 +37,46 @@
         }
 
     </style>
+
+    <!-- Analytics for Dec 2012 newsletter prototypes -->
+    <script src='../../common/phetcommon/js/analytics/google-analytics.js' type="text/javascript"></script>
 </head>
 <body>
-<script type="text/javascript" src="src/js/vendor/caat.js"></script>
-<script type="text/javascript" src="src/js/vendor/hammer.js"></script>
+
+<!-- Used by PrototypeDialog.js, extensively styled in phetcommon.css -->
+<div id="prototype-dialog-overlay">
+    <div id="prototype-dialog-content">
+        <h3 id="prototype-dialog-title">Concentration (prototype)</h3>
+
+        <div id="prototype-dialog-body">
+            <a id="prototype-dialog-logo" href="http://phet.colorado.edu">
+                <!--This template is instantiated in simulation code, so must refer to the correct relative path for common images.-->
+                <img src="../../common/phetcommon/images/phet-logo-120x50.jpg"/>
+            </a>
+
+            <div id="prototype-dialog-text">
+                Here at <a href="http://phet.colorado.edu" target="_blank">PhET Interactive Simulations</a>, we are investigating simulations that work in the browser and on tablets.
+                Please be aware that this version is a prototype, and may be inaccurate or incomplete in parts. Enjoy and please contact <a
+                    href="mailto:phethelp@colorado.edu">phethelp@colorado.edu</a>
+                if you have trouble running it on any of your browsers or mobile devices.
+            </div>
+            <button id="prototype-dialog-ok-button">OK</button>
+        </div>
+    </div>
+</div>
+<script type="text/javascript" src="js/vendor/caat.js"></script>
+<script type="text/javascript" src="js/vendor/hammer.js"></script>
 <!--<script type="text/javascript" src="caat-components.js"></script>-->
 <script type="text/javascript" src="concentration.js"></script>
 <script type="text/javascript" src="main.js"></script>
+
+<script type="text/javascript">
+    window.onload = function ( e ) {
+        $( '#prototype-dialog-ok-button' ).click( function () {
+            $( '#prototype-dialog-overlay' ).hide();
+        } );
+    }
+</script>
+
 </body>
 </html>
